tests/specs/run/unstable/broadcast_channel.out
error: Uncaught (in promise) ReferenceError: BroadcastChannel is not defined
new BroadcastChannel("hello");
^
    at [WILDCARD]broadcast_channel.ts:1:1

    info: BroadcastChannel is an unstable API.
    hint: Run again with `--unstable-broadcast-channel` flag to enable this API.
